[package]
authors = ['Maciej Baj <https://github.com/MaciejBaj>']
description = 'Gateway for multi-phase contracts execution secured by escrow accounts'
edition = '2018'
homepage = 'https://github.com/t3rn/t3rn'
license = 'Apache 2.0'
name = 'escrow-gateway'
repository = 'https://github.com/t3rn/t3rn.git'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.escrow-gateway-primitives]
default-features = false
path = 'common'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-support]
default-features = false
path = "../support"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
path = "../system"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.balances]
default-features = false
path = "../balances"
package = 'pallet-balances'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.contracts]
path = "../contracts"
default-features = false
package = 'pallet-contracts'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
path = "../../primitives/std"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.sp-core]
default-features = false
path = "../../primitives/core"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
path = "../../primitives/io"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
path = "../../primitives/runtime"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.pallet-timestamp]
path = "../timestamp"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.pallet-randomness-collective-flip]
default-features = false
path = "../randomness-collective-flip"
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.anyhow]
version = '*'

[dev-dependencies]
wat = { version = "1.0", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'contracts/std',
    'escrow-gateway-primitives/std',
]
